added dredd tests
